# Greedy_Legalization_Project

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  check_benchmarks.py  checkplacement.py  main.py  requirements.txt  run.sh
configs/: cases.json
docs/: legalization.md
src/: __init__.py  custom_legalizer.py
src/baseline/: CMakeLists.txt  __init__.py  abacus_legalizer.py
src/baseline/ops/: __init__.py
src/baseline/ops/abacus_legalize/: __init__.py  abacus_legalize.py
src/baseline/ops/greedy_legalize/: __init__.py  greedy_legalize.py
src/baseline/ops/greedy_legalize/src/: legalize_bin_cpu.cpp
src/baseline/ops/legality_check/: __init__.py
src/baseline/ops/utility/: __init__.py
src/database/: __init__.py  bookshelf.py  design.py  metrics.py
test/: README.md
test/benchmarks/: README.md
test/benchmarks/AES/: AES.aux  AES.nets  AES.nodes  AES.pl  AES.route  AES.scl  AES.shapes  README.md
test/benchmarks/GCD/: GCD.aux  GCD.nets  GCD.nodes  GCD.pl  GCD.route  GCD.scl  README.md
test/benchmarks/JPEG/: JPEG.aux  JPEG.nodes  JPEG.pl  JPEG.route  JPEG.scl  README.md
test/toy_tiny/: toy_tiny.aux  toy_tiny.nets  toy_tiny.nodes  toy_tiny.pl  toy_tiny.scl
